# ProspectAI

./: .env.example  .gitignore  .webui_secret_key  AGENT_CONFIGURATION.md  AGENT_LLM_CONFIGURATION.md  CLAUDE.md  LICENSE  README.md  REDDIT_API_SETUP.md  VERSION.md  architecture-review-2.md  architecture-review.md  conftest.py  env.example  long-buy.md  main.py  prospect_ai_crew.py  prospect_ai_flow.py  pyproject.toml  requirements.txt  run_help.py  test_skeleton.py
agents/: __init__.py  base_agent.py  caching_llm.py  critic_agent.py  fundamental_analyst_agent.py  investor_strategic_agent.py  market_analyst_agent.py  technical_analyst_agent.py
config/: agent_config_loader.py  agents.yaml  config.py  task_config_loader.py  tasks.yaml
schemas/: README.md  agent_outputs.py
scripts/: deploy.sh  verify_prompt_cache.py
tests/: __init__.py  conftest.py  debug_reddit_tool.py  debug_tool_args.py  run_help.py  test_agents.py  test_caching_llm.py  test_cli.py  test_config.py  test_crew.py  test_enhanced_pdf_generation.py  test_execution_tracker.py  test_flow_phases.py  test_market_analyst_llm.py  test_market_analyst_output.py  test_reddit_output.py  test_schemas.py  test_skeleton.py  test_technical_analyst.py  test_tools_fundamental.py  test_tools_portfolio_allocator.py  test_tools_reddit.py  test_tools_technical.py  test_yfinance_cache.py
utils/: composite_score_tool.py  enhanced_pdf_generator.py  execution_tracker.py  fundamental_data_tool.py  fundamental_grader_tool.py  portfolio_allocator_tool.py  portfolio_builder_tool.py  recommendation_validator.py  reddit_analysis_tool.py  yfinance_cache.py  (+4 more)
(+162 files in other folders)
